tests/ui/async-await/async-fn-path-elision.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> $DIR/async-fn-path-elision.rs:5:20
   |
LL | async fn error(lt: HasLifetime) {
   |                    ^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL | async fn error(lt: HasLifetime<'_>) {
   |                               ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0726`.
